feat: fixing lemon squeezy webhook issues and adding documentation to some endpoints
