# go-server/handlers/billing.go
@@ -7,53 +7,76 @@ import (
 	"gptube/config"
 	"gptube/database"
 	"gptube/models"
+	"gptube/services"
 	"gptube/utils"
 	"net/http"
+	"strings"
 	"time"
 
-	firebase "firebase.google.com/go"
 	"github.com/NdoleStudio/lemonsqueezy-go"
 	"github.com/gofiber/fiber/v2"
 )
 
-var lemonSqueezyAuthHeader = fmt.Sprintf("Bearer %s", config.Config("LEMON_SQUEEZY_API_KEY"))
-var lemonClient = lemonsqueezy.New(lemonsqueezy.WithAPIKey(config.Config("LEMON_SQUEEZY_API_KEY")))
-var lemonWebhookClient = lemonsqueezy.New(lemonsqueezy.WithSigningSecret(config.Config("LEMON_SQUEEZY_WEBHOOK_PASSWORD")))
-
-func BillingProducts(c *fiber.Ctx) error {
-	allVariants, _, err := lemonClient.Variants.List(context.Background())
-	if err != nil {
-		return utils.HandleError(err, http.StatusInternalServerError, c)
+// @Summary		Get the subscription plans offered by GPTube
+// @Description	An endpoint to retrieve the subscription plan offered by GPTube with its price, features, etc.
+// @Produce		json
+// @Success		200	{array}		models.SubscriptionPlan
+// @Failure		500	{object}	fiber.Error
+// @Router			/billing/subscription-plans [get]
+func BillingSubscriptionPlans(c *fiber.Ctx) error {
+	var subscriptionPlans map[models.SubscriptionPlanSlug]*models.SubscriptionPlan
+	var err error
+	if config.Config("ENV_MODE") == "production" {
+		subscriptionPlans, err = database.GetSubscriptionPlansProduction()
+	} else if config.Config("ENV_MODE") == "development" {
+		subscriptionPlans, err = database.GetSubscriptionPlansDevelopment()
+	} else {
+		return fiber.NewError(http.StatusInternalServerError, "error while retrieving subscription plans")
 	}
-	return c.JSON(allVariants)
+	if err != nil {
+		return fiber.NewError(http.StatusInternalServerError, "error while retrieving subscription plans")
+	}
+	var arrSubscriptionPlans []models.SubscriptionPlan
+	for _, subPlan := range subscriptionPlans {
+		arrSubscriptionPlans = append(arrSubscriptionPlans, *subPlan)
+	}
+	return c.Status(http.StatusOK).JSON(arrSubscriptionPlans)
 }
 
+// @Summary		Get the checkout URL for a subscription plan
+// @Description	An endpoint to retrieve the URL for a subscription plan sending
+// @Description	the account email as well.
+// @Produce		json
+// @Param			variant_id		query		string	true	"the variant id of the subscription plan"
+// @Param			account_email	query		string	true	"the account email"
+// @Success		200				{object}	lemonsqueezy.ApiResponse[lemonsqueezy.CheckoutAttributes, lemonsqueezy.ApiResponseRelationshipsDiscount]
+// @Failure		400				{object}	fiber.Error
+// @Failure		500				{object}	fiber.Error
+// @Router			/billing/checkout [get]
 func BillingCheckout(c *fiber.Ctx) error {
-	variantId := c.Query("variant_id", "")
-	userEmail := c.Query("user_email", "")
+	variantId := strings.TrimSpace(c.Query("variant_id", ""))
+	userEmail := strings.TrimSpace(c.Query("account_email", ""))
 
 	if variantId == "" || userEmail == "" {
-		return utils.HandleError(
-			fmt.Errorf("please provide a variant ID and a user email"),
-			http.StatusBadRequest, c,
-		)
+		return fiber.NewError(http.StatusBadRequest, "please provide a variant id and an account email")
 	}
 
 	checkoutParams := &lemonsqueezy.CheckoutCreateParams{
-		StoreID:         config.Config("LEMON_SQUEEZY_STORE_ID"),
+		StoreID:         services.LemonStoreId,
 		VariantID:       variantId,
-		ExpiresAt:       time.Now().Add(24 * time.Hour),
+		ExpiresAt:       time.Now().Add(24 * time.Hour), // expires in 24 hours
 		EnabledVariants: make([]int, 0),
-		ButtonColor:     "#D91E1E",
+		ButtonColor:     "#81F7AC",
 		CustomData: map[string]string{
-			"gptube_user_email": userEmail,
+			"gptube_account_email": userEmail,
 		},
 	}
-	checkout, _, err := lemonClient.Checkouts.Create(context.Background(), checkoutParams)
+	checkout, _, err := services.LemonClient.Checkouts.Create(context.Background(), checkoutParams)
 	if err != nil {
-		return utils.HandleError(err, http.StatusInternalServerError, c)
+		return fiber.NewError(http.StatusInternalServerError,
+			"Error while trying to get the checkout URL, try again later.")
 	}
-	return c.JSON(checkout)
+	return c.Status(http.StatusOK).JSON(checkout)
 }
 
 func BillingSubscriptions(c *fiber.Ctx) error {
@@ -72,6 +95,15 @@ func BillingSubscriptions(c *fiber.Ctx) error {
 	})
 }
 
+// @Summary		Get the latest Invoices from a subscription
+// @Description	An endpoint to retrieve the invoices from a user's subscription
+// @Produce		json
+// @Param			variant_id		query		string	true	"the variant id of the subscription plan"
+// @Param			account_email	query		string	true	"the account email"
+// @Success		200				{object}	lemonsqueezy.ApiResponse[lemonsqueezy.CheckoutAttributes, lemonsqueezy.ApiResponseRelationshipsDiscount]
+// @Failure		400				{object}	fiber.Error
+// @Failure		500				{object}	fiber.Error
+// @Router			/billing/checkout [get]
 func BillingSubscriptionInvoices(c *fiber.Ctx) error {
 	var body models.InvoicesRequest
 	if err := c.BodyParser(&body); err != nil {
@@ -81,7 +113,7 @@ func BillingSubscriptionInvoices(c *fiber.Ctx) error {
 	var invoices lemonsqueezy.SubscriptionInvoicesApiResponse
 	agent := fiber.AcquireAgent()
 	agent.ContentType("application/json")
-	agent.Set("Authorization", lemonSqueezyAuthHeader)
+	agent.Set("Authorization", services.LemonSqueezyAuthHeader)
 	req := agent.Request()
 	req.Header.SetMethod(fiber.MethodGet)
 	req.SetRequestURI(fmt.Sprintf("%s/subscription-invoices", config.Config("LEMON_SQUEEZY_API_URL")))
@@ -108,7 +140,7 @@ func BillingUpdatePaymentMethod(c *fiber.Ctx) error {
 		err := fmt.Errorf("please add the 'subscription_id' query param")
 		return utils.HandleError(err, http.StatusBadRequest, c)
 	}
-	subscription, _, err := lemonClient.Subscriptions.Get(context.Background(), subscriptionId)
+	subscription, _, err := services.LemonClient.Subscriptions.Get(context.Background(), subscriptionId)
 	if err != nil {
 		return utils.HandleError(err, http.StatusInternalServerError, c)
 	}
@@ -121,7 +153,7 @@ func BillingCancelSubscription(c *fiber.Ctx) error {
 		err := fmt.Errorf("please add the 'subscription_id' query param")
 		return utils.HandleError(err, http.StatusBadRequest, c)
 	}
-	_, _, err := lemonClient.Subscriptions.Cancel(context.Background(), subscriptionId)
+	_, _, err := services.LemonClient.Subscriptions.Cancel(context.Background(), subscriptionId)
 	if err != nil {
 		return utils.HandleError(err, http.StatusInternalServerError, c)
 	}
@@ -140,7 +172,7 @@ func BillingResumeSubscription(c *fiber.Ctx) error {
 			Cancelled: false,
 		},
 	}
-	_, _, err := lemonClient.Subscriptions.Update(context.Background(), subscriptionParams)
+	_, _, err := services.LemonClient.Subscriptions.Update(context.Background(), subscriptionParams)
 	if err != nil {
 		return utils.HandleError(err, http.StatusInternalServerError, c)
 	}
@@ -150,20 +182,18 @@ func BillingResumeSubscription(c *fiber.Ctx) error {
 func billingCreateSubscriptionWebhookHandler(
 	subscription *lemonsqueezy.WebhookRequest[lemonsqueezy.Subscription,
 		lemonsqueezy.ApiResponseRelationshipsSubscription]) error {
-	app, err := firebase.NewApp(database.Ctx, nil, database.Sa)
-	if err != nil {
-		return err
-	}
-
-	client, err := app.Firestore(database.Ctx)
+	client, err := database.GetClient()
 	if err != nil {
 		return err
 	}
 
 	defer client.Close()
 
-	gptubeUserEmail := fmt.Sprintf("%s", subscription.Meta.CustomData["gptube_user_email"])
-	newSubscriptionFirestore := models.SubscriptionFirestore{
+	gptubeAccountEmail := subscription.Meta.CustomData["gptube_account_email"]
+	if gptubeAccountEmail == nil {
+		gptubeAccountEmail = subscription.Data.Attributes.UserEmail
+	}
+	newSubscriptionFirestore := models.Subscription{
 		UserEmail:           subscription.Data.Attributes.UserEmail,
 		SubscriptionId:      subscription.Data.ID,
 		OrderId:             subscription.Data.Attributes.OrderID,
@@ -183,8 +213,9 @@ func billingCreateSubscriptionWebhookHandler(
 		UpdatePaymentMethod: subscription.Data.Attributes.Urls.UpdatePaymentMethod,
 	}
 
-	fmt.Printf("creating subscription %s for user %s\n", subscription.Data.ID, gptubeUserEmail)
-	userDoc := client.Collection("users").Doc(gptubeUserEmail)
+	fmt.Printf("[billingCreateSubscriptionWebhookHandler] creating subscription %s for user %s\n",
+		subscription.Data.ID, gptubeAccountEmail)
+	userDoc := client.Collection("users").Doc(gptubeAccountEmail.(string))
 	_, err = userDoc.Collection("subscriptions").Doc(subscription.Data.ID).
 		Set(database.Ctx, newSubscriptionFirestore)
 	if err != nil {
@@ -198,18 +229,17 @@ func billingUpdateSubscriptionWebhookHandler(
 	subscription *lemonsqueezy.WebhookRequest[
 		lemonsqueezy.Subscription,
 		lemonsqueezy.ApiResponseRelationshipsSubscription]) error {
-	app, err := firebase.NewApp(database.Ctx, nil, database.Sa)
+	client, err := database.GetClient()
 	if err != nil {
 		return err
 	}
+	defer client.Close()
 
-	client, err := app.Firestore(database.Ctx)
-	if err != nil {
-		return err
+	gptubeAccountEmail := subscription.Meta.CustomData["gptube_account_email"]
+	if gptubeAccountEmail == nil {
+		gptubeAccountEmail = subscription.Data.Attributes.UserEmail
 	}
-
-	gptubeUserEmail := fmt.Sprintf("%s", subscription.Meta.CustomData["gptube_user_email"])
-	updatedSubscriptionFirestore := models.SubscriptionFirestore{
+	updatedSubscriptionFirestore := models.Subscription{
 		UserEmail:           subscription.Data.Attributes.UserEmail,
 		SubscriptionId:      subscription.Data.ID,
 		OrderId:             subscription.Data.Attributes.OrderID,
@@ -229,10 +259,9 @@ func billingUpdateSubscriptionWebhookHandler(
 		UpdatePaymentMethod: subscription.Data.Attributes.Urls.UpdatePaymentMethod,
 	}
 
-	defer client.Close()
-
-	fmt.Printf("updating subscription %s for user %s\n", subscription.Data.ID, gptubeUserEmail)
-	userDoc := client.Collection("users").Doc(gptubeUserEmail)
+	fmt.Printf("[billingUpdateSubscriptionWebhookHandler] updating subscription %s for user %s\n",
+		subscription.Data.ID, gptubeAccountEmail)
+	userDoc := client.Collection("users").Doc(gptubeAccountEmail.(string))
 	_, err = userDoc.Collection("subscriptions").Doc(subscription.Data.ID).
 		Set(database.Ctx, updatedSubscriptionFirestore)
 	if err != nil {
@@ -246,51 +275,57 @@ func BillingSubscriptionsWebhooks(c *fiber.Ctx) error {
 	headers := c.GetReqHeaders()
 	signature := headers["X-Signature"]
 
-	isValidReqBody := lemonWebhookClient.Webhooks.Verify(
+	isValidReqBody := services.LemonWebhookClient.Webhooks.Verify(
 		context.Background(), signature, c.Body())
 
 	if isValidReqBody {
 		var webhookBody lemonsqueezy.WebhookRequest[lemonsqueezy.Subscription, lemonsqueezy.ApiResponseRelationshipsSubscription]
 
 		if err := c.BodyParser(&webhookBody); err != nil {
-			c.JSON(fiber.Map{
-				"error": fmt.Errorf("%v", err).Error(),
-			})
-			return c.SendStatus(http.StatusInternalServerError)
+			return fiber.NewError(http.StatusInternalServerError, err.Error())
 		}
+
+		defer func() {
+			fmt.Printf("[BillingSubscriptionsWebhooks] event %s handled correctly\n", webhookBody.Meta.EventName)
+		}()
 
 		prettyJSON, err := json.MarshalIndent(webhookBody, "", "  ")
 		if err != nil {
 			return utils.HandleError(err, http.StatusInternalServerError, c)
 		}
 
-		fmt.Println(string(prettyJSON))
-
 		eventHandlers := make(map[string]func(
 			subscription *lemonsqueezy.WebhookRequest[
 				lemonsqueezy.Subscription,
 				lemonsqueezy.ApiResponseRelationshipsSubscription]) error)
+
+		switch webhookBody.Meta.EventName {
+		case "subscription_payment_success",
+			"subscription_payment_failed",
+			"subscription_payment_recovered",
+			"subscription_cancelled",
+			"subscription_expired":
+			return c.Status(http.StatusOK).JSON(fiber.Map{
+				"message": "webhook received correctly",
+			})
+		}
+
+		fmt.Printf("[BillingSubscriptionsWebhooks]\npayload body: %s\n", string(prettyJSON))
 		eventHandlers["subscription_created"] = billingCreateSubscriptionWebhookHandler
 		eventHandlers["subscription_updated"] = billingUpdateSubscriptionWebhookHandler
 
 		handler, ok := eventHandlers[webhookBody.Meta.EventName]
 		if !ok {
-			return utils.HandleError(
-				fmt.Errorf("event not registered on the webhook"),
-				http.StatusInternalServerError, c)
+			return fiber.NewError(http.StatusInternalServerError,
+				"event not registered on the webhook")
 		}
-		fmt.Printf("%s\n", webhookBody.Meta.EventName)
 		err = handler(&webhookBody)
 		if err != nil {
-			utils.HandleError(err, http.StatusInternalServerError, c)
+			return fiber.NewError(http.StatusInternalServerError, err.Error())
 		}
-		fmt.Printf("event %s handled correctly\n", webhookBody.Meta.EventName)
-		return c.JSON(fiber.Map{
+		return c.Status(http.StatusOK).JSON(fiber.Map{
 			"message": "webhook received correctly",
 		})
 	}
-
-	return utils.HandleError(
-		fmt.Errorf("error while validating the signature"),
-		http.StatusInternalServerError, c)
+	return fiber.NewError(http.StatusInternalServerError, "error while validating the signature")
 }
